[package]
name = "p2p"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.87"
libp2p = { version = "0.54.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
